# rattish

./: .gitignore  .gitmodules  LICENSE  README.md  RUN.bat  RUN.sh  TEST.sh  Taskfile.yml  main.py  package-lock.json  package.json  pyproject.toml  rodent.yml
.devtools/: git-update-after-regenerate.sh  helpers.py  push-devtools-and-pull-request.sh  rattish_manuals_formating.py  recreate-docs.py
.devtools/.tty-story/: devtools-submodules.sh
.devtools/data/: all-commands.txt  commands.json  readme-filler.json
.devtools/shell-procedures/: devtools-submodules.sh  functions.sh  helper.sh  init-dev.sh  init.sh  inspect-project.sh  inspect.sh  open-project.sh  open.sh  printer_commit.sh  printer_pullrequest.sh  publish.sh  submodule-reload.sh  sync-devtools.sh  update-devtools.sh  update-project.sh  update-version.sh  update.sh  upload-changes.sh
.docs-data/: implementations.csv  interpreters.csv
.docs-data/core/: header-textart.txt
.docs-forms/: command-setter.example.ini  core-graphics-declare.example.ini  namespace-description.template.md
command-list/: 0x00.md  0x21.md  0x22.md  0x23.md  0x24.md  0x25.md  0x26.md  0x2a.md  0x2b.md  0x2d.md  0x2e.md  0x2f.md  0x3a.md  0x3b.md  0x3c.md  0x3d.md  0x3e.md  0x3f.md  0x40.md  0x5b.md  0x5c.md  0x5d.md  0x5e.md  0x5f.md  0x7b.md  0x7c.md  0x7d.md  0x7e.md
dev-tools/: print-info.py
doc-prepare/: command-details-template.md  inspect-command-list-dir.sh  namespaces.json  readme-filler.json
docs/: concept-of-mechanics.md  playground.ipynb
examples/: README.md
src/c_rat/: rat.h
tools/: init_namespace_file.py
(+42 files in other folders)
